--- a/Client/src/app/app.component.html
+++ b/Client/src/app/app.component.html
@@ -9,7 +9,9 @@
   ><h3>Loading.....</h3>
 </ngx-spinner> -->
 
-<ngx-spinner><h3 style="color: white">Loading.....</h3> </ngx-spinner>
+<ngx-spinner type="ball-scale-multiple"
+  ><h3 style="color: white">Loading.....</h3>
+</ngx-spinner>
 <app-nav></app-nav>
 <div class="container" style="margin-top: 100px">
   <!-- <app-home></app-home> -->
