--- a/Client/src/app/members/member-card/member-card.component.html
+++ b/Client/src/app/members/member-card/member-card.component.html
@@ -26,7 +26,7 @@
       <h5 class="card-title">Card title</h5>
       <p class="card-text">
         <i class="fa fa-user mr-2"></i>
-        {{ member.knownAs }}
+        {{ member.knownAs }} ,{{ member.age }}
       </p>
       <p href="#">{{ member.city }}</p>
         
