--- a/Client/src/app/members/member-list/member-list.component.html
+++ b/Client/src/app/members/member-list/member-list.component.html
@@ -1,5 +1,106 @@
+<div class="text-center mt-3">
+  <h2>Your matches - {{ pagination.totalItems }} found</h2>
+</div>
+
+<div class="container mt-3">
+  <div class="row"></div>
+  <form
+    #form="ngForm"
+    class="d-flex flex-row align-items-center flex-wrap"
+    (ngSubmit)="loadMembers()"
+    autocomplete="off"
+  >
+    <div class="form-group">
+      <label>Age From:</label>
+      <input
+        type="number"
+        class="form-control"
+        style="width: 70px"
+        name="minAge"
+        [(ngModel)]="userParams.minAge"
+      />
+    </div>
+    <div class="form-group p-2">
+      <label>Age to:</label>
+      <input
+        type="number"
+        class="form-control ms-1"
+        style="width: 70px"
+        name="maxAge"
+        [(ngModel)]="userParams.maxAge"
+      />
+    </div>
+    <div class="form-group px-2">
+      <label for="">Show</label>
+      <select
+        name="gender"
+        style="width: 130px"
+        [(ngModel)]="userParams.gender"
+        class="form-control ml-1"
+      >
+        <option *ngFor="let gender of genderList" [value]="gender.value">
+          {{ gender.display }}
+        </option>
+      </select>
+    </div>
+    <div class="col">
+      <div class="btn-group float-right">
+        <button class="btn btn-primary ms-1" type="submit">
+          Applay Filter
+        </button>
+        <button
+          (click)="resetFilters()"
+          class="btn btn-info ms -1"
+          type="submit"
+        >
+          Applay Filter
+        </button>
+        <div class="btn btn-primary">
+          <button
+            type="button"
+            class="btn btn-primary"
+            name="orderBy"
+            (click)="loadMembers()"
+            btnRadio="lastActive"
+            [(ngModel)]="userParams.orderBy"
+          >
+            Last Active
+          </button>
+          <button
+            type="button"
+            class="btn btn-primary"
+            name="orderBy"
+            (click)="loadMembers()"
+            btnRadio="created"
+            [(ngModel)]="userParams.orderBy"
+          >
+            newest Member
+          </button>
+        </div>
+      </div>
+    </div>
+  </form>
+</div>
 <div class="row">
-  <div class="col-3" *ngFor="let member of members | async">
+  <div
+    class="col-3"
+    *ngFor="let member of members"
+    [(ngModel)]="userParams.maxAge"
+  >
     <app-member-card [member]="member"></app-member-card>
   </div>
+</div>
+
+<div class="d-flex justify-content-center">
+  <pagination
+    [boundaryLinks]="true"
+    [totalItems]="pagination.totalItems"
+    [itemsPerPage]="pagination.itemsPerPage"
+    [(ngModel)]="pagination.currentPage"
+    (pageChanged)="pageChanged($event)"
+    previousText="&lsaquo;"
+    nextText="&rsaquo;"
+    firstText="&laquo;"
+    lastText="&raquo;"
+  ></pagination>
 </div>
