--- a/Client/src/app/nav/nav.component.html
+++ b/Client/src/app/nav/nav.component.html
@@ -45,7 +45,7 @@
           alt="{{ user.username }}"
         />
         <a class="dropdown-toggle text-light" dropdownToggle
-          >Welcome {{ user.username | titlecase }}</a
+          >Welcome {{ user.knownAs | titlecase }}</a
         >
         <div class="dropdown-menu ml-2" *dropdownMenu>
           <a class="dropdown-item" routerLink="/member/edit">Edit Profile</a>
