--- a/Client/src/app/members/member-card/member-card.component.html
+++ b/Client/src/app/members/member-card/member-card.component.html
@@ -12,10 +12,11 @@
         </a>
       </li>
       <li class="list-inline-item">
-        <a class="btn btn-primary">
+        <button (click)="addLike(member)" class="btn btn-primary">
           <i class="fa fa-heart"></i>
-        </a>
+        </button>
       </li>
+
       <li class="list-inline-item">
         <button class="btn btn-primary">
           <i class="fa fa-envelope"></i>
